monitoring/templates/deployments-grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-grafana
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      components: grafana
  template:
    metadata:
      labels:
        components: grafana
    spec:
      containers:
        - name: nginx
          image: grafana/grafana:10.4.2
          ports:
            - containerPort: 3000
