monitoring/templates/service-prom.yml
apiVersion: v1
kind: Service
metadata:
  name: service-prom
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 9090
      protocol: TCP
  selector:
    components: prometheus
